# ocean-curation-pipeline-toolkit

./: .gitignore  CONTRIBUTORS.md  Makefile  PROJECT_BLUEPRINT.md  README.md  config.yaml  pyproject.toml  run.sh
.github/workflows/: ci.yml
docs/: METHODS.md
notebooks/: pipeline_walkthrough.ipynb
ocean_curator/: __init__.py  __main__.py  utils.py
ocean_curator/commands/: __init__.py  checksum_cmd.py  init_cmd.py  metadata_cmd.py  netcdf_cmd.py  package_cmd.py  profile_cmd.py  transform_cmd.py  validate_cmd.py
ocean_curator/templates/: iso19115_2.xml.j2
ocean_curator/validators/: __init__.py
sample_data/: SOURCE.md  generate_samples.py
sample_data/raw/: GOMECC4_cruise_watersamples_RAW.xlsx  station_data.csv  station_log.csv
tests/: test_pipeline.py
